# scilab

./: .gitattributes  .gitlab-ci.yml  README.md
scilab/modules/colpack/: Makefile.am  Makefile.in  colpack.iss  colpack.rc  colpack.vcxproj  colpack.vcxproj.filters
scilab/modules/colpack/demos/: colpack.dem.gateway.sce  minimalsurface.sce  minimalsurfacepattern.sce  testHessian.sce
scilab/modules/colpack/demos/HBmatrices/: arc130.rua.dem.sce  ash219.pra.dem.sce  ash292.psa.dem.sce  ash331.pra.dem.sce  ash85.psa.dem.sce  curtis54.pua.dem.sce  eris1176.psa.dem.sce  fs_541_1.rua.dem.sce  gent113.pua.dem.sce  hess.dem.gateway.sce  ibm32.pua.dem.sce  jac.dem.gateway.sce  lund_a.rsa.dem.sce  lund_b.rsa.dem.sce  str__200.rua.dem.sce  testHessBoeing.sce  testJacBoeing.sce  will199.pua.dem.sce  will57.pua.dem.sce
scilab/modules/colpack/etc/: colpack.start
scilab/modules/colpack/help/en_US/: addchapter.sce
scilab/modules/colpack/help/ja_JP/: addchapter.sce
scilab/modules/colpack/includes/: colpack_gw.hxx  dynlib_colpack.h  dynlib_colpack_gw.h  spCompGeneric.hxx  spCompHessian.hxx  spCompJacobian.hxx
scilab/modules/colpack/macros/: %_spCompHessian_p.sci  %_spCompJacobian_p.sci  buildmacros.sce  spyCol.sci
scilab/modules/colpack/sci_gateway/: colpack_gateway.xml
scilab/modules/colpack/sci_gateway/cpp/: colpack_gw.rc  colpack_gw.vcxproj  colpack_gw.vcxproj.filters  sci_percent_spCompGeneric_clear.cpp  sci_percent_spCompGeneric_e.cpp  sci_spCompHessian.cpp  sci_spCompJacobian.cpp
scilab/modules/colpack/src/cpp/: spCompGeneric.cpp  spCompHessian.cpp  spCompJacobian.cpp
scilab/modules/colpack/tests/unit_tests/: minimal.tst  minimal_pattern.tst  testHessian.tst  testJac.tst
scilab/modules/differential_equations/: Makefile.am  Makefile.in  differential_equations.iss
scilab/modules/differential_equations/demos/: differential_equations.dem.gateway.sce
scilab/modules/differential_equations/demos/flow/: create_interface.sci
scilab/modules/differential_equations/demos/levitron/: levitron_gui.sci
scilab/modules/differential_equations/demos/sundials/: ball.dem.sce  demo_cardioid_pendulum.sce  demo_chain.sce  demo_double_pendulum.sce  demo_npend.sce  demo_single_pendulum.sce  demo_sir_ident.sce  demo_spline_pendulum.sce  index2.sci  lagrangian_DAE.sce  lorenz.dem.sce  minimal.dem.sce  pend3d1.dem.sce  springboard.dem.sce  sundials.dem.gateway.sce
scilab/modules/differential_equations/demos/wheel/: wheel1.dem.sce  wheel2.dem.sce  wheel_show.sci
scilab/modules/differential_equations/help/en_US/: addchapter.sce  bvode.xml  dae.xml  dae_root.xml  daskr.xml  dasrt.xml  dassl.xml  impl.xml  intc.xml  intl.xml  ode.xml  ode_root.xml
scilab/modules/differential_equations/help/fr_FR/: addchapter.sce  dae.xml  daskr.xml
scilab/modules/differential_equations/help/ja_JP/: addchapter.sce  bvode.xml  dae.xml  daskr.xml  dasrt.xml  dassl.xml  impl.xml  intl.xml  ode_optional_output.xml  ode_root.xml
scilab/modules/differential_equations/help/pt_BR/: dae.xml  dasrt.xml  dassl.xml  impl.xml  intl.xml  ode.xml  ode_optional_output.xml  ode_root.xml
scilab/modules/differential_equations/help/ru_RU/: addchapter.sce  bvode.xml  dae.xml  dasrt.xml  dassl.xml  impl.xml  intl.xml  ode.xml  ode_optional_output.xml  ode_root.xml
scilab/modules/differential_equations/includes/: ARKODEManager.hxx  CVODEManager.hxx  IDAManager.hxx  KINSOLManager.hxx  LSODARManager.hxx  OdeManager.hxx  SUNDIALSBridge.hxx  SUNDIALSManager.hxx  differential_equations_gw.hxx  differentialequationfunctions.hxx
scilab/modules/differential_equations/macros/: %_odeSolution_p.sci  SUN_Clink.sci  dae.sci  intl.sci
scilab/modules/differential_equations/sci_gateway/: differential_equations_gateway.xml  differential_equations_gw.vcxproj
scilab/modules/differential_equations/sci_gateway/cpp/: differential_equations_gw.cpp  sci_bvode.cpp  sci_daskr.cpp  sci_dasrt.cpp  sci_dassl.cpp  sci_feval.cpp  sci_impl.cpp  sci_int2d.cpp  sci_int3d.cpp  sci_intg.cpp  sci_kinsol.cpp  sci_ode.cpp  sci_odedc.cpp  sci_percent_odeSolution.cpp
scilab/modules/differential_equations/src/c/: DllmainDifferential_equations.c  dassl.c  differential_equations.rc  differential_equations.vcxproj
scilab/modules/differential_equations/src/cpp/: ARKODEManager.cpp  CVODEManager.cpp  IDAManager.cpp  KINSOLManager.cpp  OdeManagerCompute.cpp  OdeManagerHelpers.cpp  OdeManagerInit.cpp  OdeManagerParse.cpp  OdeManagerSolve.cpp  SUNDIALSManager.cpp  complexHelpers.cpp  differentialequationfunctions.cpp  odeparameters.cpp
scilab/modules/differential_equations/src/fortran/: differential_equations_f.rc  differential_equations_f2c.vcxproj  lsdisc.f  odeint.f
scilab/modules/differential_equations/src/patched_sundials/: patched_sundials.rc  patched_sundials.vcxproj  patched_sundials.vcxproj.filters  scicos_sundials.def  scicos_sundials.rc  scicos_sundials.vcxproj.filters
scilab/modules/differential_equations/src/scripts/: 01-sundials-extension.patch  03-export-and-config.patch  cvodes.c.patch  cvodes.h.patch  getSundials.sh  sundials_config.h.patch  sundials_export.h.patch  sundials_extension.patch
scilab/modules/differential_equations/tests/nonreg_tests/: bug_10283.dia.ref  bug_10283.tst  bug_10287.dia.ref  bug_10287.tst  bug_10565.dia.ref  (+45 more)
scilab/modules/sundials/: Makefile.am  Makefile.in  elementary_functions_f_Import.def  sundials.iss  sundials.vcxproj  sundials.vcxproj.filters
scilab/modules/sundials/demos/: lagrangian.dem.gateway.sce  lorenz.dem.sce  minimal.dem.sce  pend3d1.dem.sce  sundials.dem.gateway.sce
scilab/modules/sundials/etc/: sundials.start
scilab/modules/sundials/includes/: ARKODEManager.hxx  CVODEManager.hxx  IDAManager.hxx  KINSOLBridge.hxx  KINSOLManager.hxx  OdeManager.hxx  SUNDIALSBridge.hxx  SUNDIALSManager.hxx  complexHelpers.hxx  dynlib_sundials_gw.h  odeparameters.hxx
scilab/modules/sundials/macros/: %SUN_DormandPrince6.sci  %SUN_DormandPrince8.sci  %SUN_Tsitouras5.sci  SUN_Clink.sci  buildmacros.sce
scilab/modules/sundials/sci_gateway/: sundials_gateway.xml  sundials_gw.vcxproj  sundials_gw.vcxproj.filters
(+8968 files in other folders)
